[tool.poetry]
name = "ml-coursera-python-assignments"
version = "0.1.0"
description = "@cyinwei's walkthrough of Andrew Ng's ML on Coursera, implemented in Python via @diberge.  See: https://github.com/dibgerge/ml-coursera-python-assignments"
authors = ["Charlie Zhang <yinwei.c.zhang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
scipy = "^1.3"
matplotlib = "^3.1"
jupyter = "^1.0"
jupyter-client = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
